improving command tests.